2010-10-14  Nathan Vander Wilt  <nate@andyet.net>

Reviewed by Darin Adler.

        Added parser for ECMAScript 5 standard date format, so Date.parse can handle RFC 3339 timestamps: https://bugs.webkit.org/show_bug.cgi?id=44632

        * runtime/DateConversion.cpp:
        (JSC::parseDate):
        * wtf/DateMath.cpp:
        (WTF::ymdhmsToSeconds):
        (WTF::parseES5DateFromNullTerminatedCharacters):
        * wtf/DateMath.h:
2010-10-14  Nathan Vander Wilt  <nate@andyet.net>

        Reviewed by Darin Adler.

        Added tests for https://bugs.webkit.org/show_bug.cgi?id=44632

        * fast/js/date-parse-test-expected.txt:
        * fast/js/script-tests/date-parse-test.js:
        (testDateParseExact):

Canonical link: https://commits.webkit.org/60412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69833 268f45cc-cd09-0410-ab3c-d52691b4dbfc